--- a/config.yaml
+++ b/config.yaml
@@ -7,26 +7,25 @@ data:
   val_frac: 0.1
   max_seq_len: 50
   min_seq_len: 5
+  vocab_size: 3952
 
 model:
   type: transformer
-  item_embedding_dim: 128
+  d_model: 128
+  dff: 512
   num_layers: 2
   num_heads: 4
   dropout: 0.1
 
 training:
-  batch_size: 64
-  epochs: 10
+  batch_size: 32
+  epochs: 25
   learning_rate: 1e-3
-  weight_decay: 1e-5
-  device: cuda
-  seed: 1
 
 evaluation:
   metrics: [hit@10, ndcg@10, mrr]
   eval_k: 10
 
 output:
-  checkpoint_dir: artifacts/checkpoints/
-  best_model_path: artifacts/best_model.pt
+  checkpoint_dir: output/checkpoints/
+  out_model_path: output/out_model.pt
