--- a/config.yaml
+++ b/config.yaml
@@ -18,14 +18,13 @@ model:
   dropout: 0.1
 
 training:
-  batch_size: 32
-  epochs: 25
+  batch_size: 64
+  epochs: 10
   learning_rate: 1e-3
 
 evaluation:
-  metrics: [hit@10, ndcg@10, mrr]
-  eval_k: 10
+  metrics: [ndcg, mrr, hit]
+  eval_k: 50
 
 output:
-  checkpoint_dir: output/checkpoints/
-  out_model_path: output/out_model.pt
+  out_model_path: output/out_model.keras
