--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,8 +1,8 @@
 data:
-  raw_path: src/recommender/data/raw/ml-1m/ratings.dat
-  train_path: src/recommender/data/processed/train.parquet
-  val_path: src/recommender/data/processed/val.parquet
-  test_path: src/recommender/data/processed/test.parquet
+  raw_path: src/data/raw/ml-1m/ratings.dat
+  train_path: src/data/processed/train.parquet
+  val_path: src/data/processed/val.parquet
+  test_path: src/data/processed/test.parquet
   train_frac: 0.8
   val_frac: 0.1
   max_seq_len: 50
