--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [project]
-name = "End-to-End-Recommendation" # Replace with a valid package name
+name = "Movie Recommendation System"
 version = "0.1.0"
